Fix styles for header and posts on mobile.

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -31,3 +31,16 @@
     width: 50%;
   }
 }
+
+@media (max-width: 380px) {
+  .headerCore {
+    flex-wrap: wrap;
+  }
+  .headerCore div {
+    margin: 10px auto 10px;
+    padding-bottom: 0;
+  }
+  .headerLinks {
+    width: 100%;
+  }
+}
